--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
+    "openai": "^4.28.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
