--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/vertexai": "^1.10.0",
+    "@google/genai": "^0.13.0",
+    "@google/generative-ai": "^0.24.1",
     "@types/js-cookie": "^3.0.6",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.507.0",
