--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@google/genai": "^0.13.0",
     "@google/generative-ai": "^0.24.1",
     "@types/js-cookie": "^3.0.6",
+    "exifr": "^7.1.3",
+    "heic2any": "^0.0.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.507.0",
     "next": "14.1.0",
